--- a/books/wt.bib
+++ b/books/wt.bib
@@ -23,3 +23,9 @@ publisher={MIT OpenCourseWare},
 author={Tsitsiklis, John},
 year=2018
 }
+@book{rueschendorf,
+title={Wahrscheinlichkeitstheorie},
+author={R{\"u}schendorf, Ludger},
+year=2016,
+publisher={Springer}
+}
