--- a/homeworks/03/sol/03.tex
+++ b/homeworks/03/sol/03.tex
@@ -65,7 +65,8 @@ Aufgrund der Monotonie von $P$ gilt somit auch $\lim_{n}P(|X_n-X|>\varepsilon)=0
 Zur Teilaufgabe (c), hier wollen wir zeigen, dass $(X_n)_n$ genau dann fast sicher konvergiert, wenn gilt, dass $\lim_n P\bigl(\bigcup_m^\infty\{|X_{m+n}-X_n|>\varepsilon\}\bigr)=0$.
 Wir gehen wie in Satz 2.3.3.3 aus \cite{rueschendorf} vor.
 Sei $(X_n)_n$ also fast sicher konvergent.
-Analog zu Folgen in Reellen Zahlen, ist das äquivalent dazu, dass $(X_n)_n$ fast sicher eine Cauchy-Folge ist \emph{was man noch genauer prüfen sollte.}
+Insbesondere ist es punktweise konvergent, bis auf Nullmengen.
+Das heißt für alle $\omega\in\Omega$ sind $(X_n(\omega)_n$ Cauchy-Folgen in den reellen Zahlen und das ist das äquivalent dazu, dass $(X_n)_n$ fast sicher eine Cauchy-Folge ist.
 Entsprechend der Argumentation aus Teilaufgabe (a) heißt das, für alle $\varepsilon>0$ gilt
 \begin{align*}
   1
